Finished Routing and Navigating Pages Module

--- a/index.html
+++ b/index.html
@@ -28,5 +28,5 @@
   <body class="container">
     <events-app></events-app>
   </body>
-  <script>toastr.success('toastr success')</script>
+ <!-- <script>toastr.success('toastr success')</script>-->
 </html>
